--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -147,7 +147,79 @@
   "hourly_visitfrom": "زيارة من",
   "hourlytr_fixconfirm": "هل أنت متأكد أنك تريد تثبيت العاملة ؟",
   "hourlytr_error": "حدث خطأ",
+  "hourlytr_loadmore": "عرض المزيد",
   "hourlytr_mahfazasubtitile": "تمكنك من الدفع الالكتروني و تجميع النقاط",
   "hourly_cancelfail": "حدث خطأ في إلغاء العقد .. برجاء المحاولة مرة أخري",
-  "hourlytr_waitcreatecontract": "عزيزنا العميل , برجاء الإنتظار قليلا , جارى إنشاء العقد والمواعيد"
+  "hourlytr_waitcreatecontract": "عزيزنا العميل , برجاء الإنتظار قليلا , جارى إنشاء العقد والمواعيد",
+  "indiv_carechildren": "إجادة المعاملة مع الأطفال",
+  "indiv_careelderly": "إجادة معاملة كبار السن",
+  "indiv_arabic": "إجادة اللغة العربية",
+  "indiv_english": "إجادة اللغة الإنجليزية",
+  "indiv_cook": "إجادة الطبخ",
+  "globalwords_from": "من",
+  "globalwords_to": "الى",
+  "indivl_profition": "اختيار المهنة",
+  "indivl_nationality": "اختيار الجنسية",
+  "indivl_month": "شهر",
+  "indivl_package": "باقة",
+  "indivl_pakageprice": "سعر الباقة",
+  "indivl_amountafterdiscount": "الإجمالي بعد الضريبة",
+  "indivl_riyal": "ريال",
+  "indivl_chooseemployee": "طريقة اختيار العاملة",
+  "indivl_fromapp": "من التطبيق",
+  "indivl_fromcompany": "من الشركة",
+  "indivl_deliverytohome": "توصيل للمنزل",
+  "indivl_recivefrombranch": "استلام من الفرع",
+  "indivl_amountwilladded": "سيتم إضافة",
+  "indivl_deliverycost ": "ريال مصاريف توصيل",
+  "indivl_choosebranch": "اختار الفرع",
+  "indivl_contractto": "تعاقد الي حين توافر",
+  "indivl_choosepackage": "اختيار الباقة",
+  "indivl_details": "تفاصيل",
+  "indivl_contractnow": "تعاقد الان",
+  "indivl_maridstate": "الحالة الاجتماعية",
+  "indivl_found": "يوجد",
+  "indivl_advancedsearch": "بحث متقدم",
+  "indivl_peronalskill": "المهارات الشخصية",
+  "indivl_prevexperience": "الخبرات السابقة",
+  "indivl_languages": "اللغات",
+  "indivl_choose": "اختار",
+  "indivl_skillrequire": "الصفات المطلوبة",
+  "indivl_personalskills": "المهارات الشخصية",
+  "indivl_wantedage": "العمر المناسب",
+  "indivl_search": "بحث",
+  "indivl_employeeinfo": "بيانات العامل-ة",
+  "indivl_empname": "الاسم",
+  "indivl_type": "النوع",
+  "indivl_packagedetails": "تفاصيل الباقة",
+  "indivl_packagename": "اسم الباقة",
+  "indivl_contractduration": "مدة التعاقد",
+  "indivl_pricewithoutvat": "السعر بدون الضريبة المضافه",
+  "indivl_vat": "الضريبة المضافة",
+  "indivl_vatamount": "قيمة الضريبة المضافة",
+  "indivl_totalpricevat": "السعر الإجمالي + الضريبة",
+  "indivl_requestdetails": "تفاصيل الطلب",
+  "indivl_save": "حفظ العقد",
+  "indivl_skip": "تخطي",
+  "indivl_uploadimages": "رفع المرفقات",
+  "indivl_uploadimagenotes": "عملية رفع المرفقات عملية ضرورية وبإمكانك تخطي هذه الخطوات الان ويجب رفعها لاحقا",
+  "indivl_idphoto": "صورة رقم الهوية",
+  "indivl_familycardimage": "صورة كارت العائلة",
+  "indivl_businesscardphoto": "صورة بطاقة العمل",
+  "indivl_contractwiththesignature": "صورة العقد مع التوقيع",
+  "indivl_nationaladdress": "العنوان الوطنى",
+  "indivl_customersalaryimage": "صورة تعريف الراتب",
+  "indivl_carinsuranceimage": "صورة تأمين السيارة",
+  "indivl_carformimage": "صورة استمارة السيارة",
+  "indivl_successnotes": "ملاحظة: عند استلام العاملة سيتم طلب توقيعكم ع العقد والاوراق المطلوبة للتعاقد",
+  "indivl_success": "نجاح",
+  "indivl_contractdetails": "تفاصيل الطلب رقم",
+  "indivl_contractamont": "قيمة العقد",
+  "indivl_backtohome": "العودة للرئيسية",
+  "indivl_addnewrequest": "اضافة طلب جديد",
+  "indivl_requestnumber": "رقم الطلب",
+  "indivl_amount": "المبلغ",
+  "indivl_orderdate": "تاريخ الطلب",
+  "indivl_orderstatus": "حالة الطلب",
+  "indiv_canclean": "إجادة التنظيف"
 }
