--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -147,6 +147,78 @@
   "hourlytr_fixconfirm": "Are you sure you want to Fixing Worker ?",
   "hourlytr_error": "an error occurred",
   "hourly_visitfrom": "Visit from ",
+  "hourlytr_loadmore": "Show more",
+  "indiv_carechildren": "Dealing in treatment with children",
+  "indiv_careelderly": "Dealing in treating the elderly",
+  "indiv_arabic": "Fluency in Arabic",
+  "indiv_english": "Fluency in English",
+  "indiv_cook": "Proficiency in cooking",
+  "indiv_canclean": "Good in Cleaning",
+  "globalwords_from": "From",
+  "globalwords_to": "To",
+  "indivl_profition": "Choose profession",
+  "indivl_nationality": "Choose Nationality",
+  "indivl_month": "Month",
+  "indivl_package": "Package",
+  "indivl_pakageprice": "package price",
+  "indivl_amountafterdiscount": "Price after discount",
+  "indivl_riyal": "Rial",
+  "indivl_chooseemployee": "How to choose a worker",
+  "indivl_fromapp": "From App",
+  "indivl_fromcompany": "From Company",
+  "indivl_deliverytohome": "Home delivery",
+  "indivl_recivefrombranch": "Receipt from the branch",
+  "indivl_amountwilladded": "Add",
+  "indivl_deliverycost ": "sar Delivery cost ",
+  "indivl_choosebranch": "Choose the branch",
+  "indivl_contractto": "Contracted till there is available",
+  "indivl_choosepackage": "Choose package",
+  "indivl_details": "Details",
+  "indivl_contractnow": "Contract Now",
+  "indivl_maridstate": "Marital Status",
+  "indivl_found": "Found",
+  "indivl_advancedsearch": "Advanced search",
+  "indivl_peronalskill": "Personal Skills",
+  "indivl_prevexperience": "Work Experience",
+  "indivl_languages": "Languages",
+  "indivl_choose": "Choose",
+  "indivl_skillrequire": "needed properties",
+  "indivl_personalskills": "Personal Skills",
+  "indivl_wantedage": "Wanted age",
+  "indivl_search": "Search",
+  "indivl_employeeinfo": "worker data",
+  "indivl_empname": "Name",
+  "indivl_type": "Type",
+  "indivl_packagedetails": "Package details",
+  "indivl_packagename": "Package Name",
+  "indivl_contractduration": "Contract Duration",
+  "indivl_pricewithoutvat": "Price Without Vat",
+  "indivl_vat": "Vat",
+  "indivl_vatamount": "Vat Amount",
+  "indivl_totalpricevat": "Total Price + Vat",
+  "indivl_requestdetails": "Request Details",
+  "indivl_save": "Save",
+  "indivl_skip": "Skip",
+  "indivl_uploadimages": "Upload attachments",
+  "indivl_uploadimagenotes": "The process of uploading attachments is a necessary process, and you can skip these steps now and they must be uploading later",
+  "indivl_idphoto": "ID photo",
+  "indivl_familycardimage": "Family Card Image",
+  "indivl_businesscardphoto": "Business card photo",
+  "indivl_contractwiththesignature": "Contract with the signature",
+  "indivl_nationaladdress": "National address",
+  "indivl_customersalaryimage": "Customer salary image",
+  "indivl_carinsuranceimage": "Car insurance image",
+  "indivl_carformimage": "Car form image",
+  "indivl_successnotes": "Note : while receiving the worker, you will be asked to sign the contract and the documents required",
+  "indivl_success": "Success",
+  "indivl_contractdetails": "Order details No",
+  "indivl_contractamont": "Contract amount",
+  "indivl_backtohome": "Back to home",
+  "indivl_addnewrequest": "Add new request",
+  "indivl_requestnumber": "Request Number",
+  "indivl_amount": "Amount",
+  "indivl_orderdate": "Order Date",
+  "indivl_orderstatus": "Order Status",
   "hourlytr_mahfazasubtitile": "It enables you to pay online and collect points",
   "hourlytr_successnote": "Note : You have only two hour allowed to pay , Payment transaction is cancelled automatically after period exceeded."
 }
